  in The European Demos and The Transbeauce II Demo)
- Handle commands 0x12 and 0x14 sent during the IKBD reset (enable both
  mouse and joystick reporting at the same time)
- Fix to DSP stack overflow handling
- Fix for GEMDOS HD emu to direct special CON:/AUX:/PRN: device files
  to TOS instead of trying to handle them as normal files

Emulator:
- Reverted preferred Videl resolution zoomed size setting from
  host desktop resolution back to 832x576 it was in Hatari v1.4,
  so that Falcon/TT emulation window sizes by default are closer
  to ST/STE ones (especially on large resolution monitors).

Fixed Games :
  Hammerfist (fire button)

Fixed demos :
  Built-in Obsolescence (DSP stack overflow)


 Version 1.6.1 (2012-01-13):
 ---------------------------

This version is mainly a bugfix for 1.6.0, where monochrome mode
gave a black screen and was not usable.

Emulation:
- Fixes to bootup issues in monochrome mode
- Better left border removal timings
- DSP external memory access cycles taken into account

Other changes:
- Fix to allow build with Xcode 3.1.3/OS X 10.5.8 PPC
- Several fixes & updates needed to Hatari UI & hconsole
  for them to work correctly with Hatari v1.6.x
- Test programs added for testing TOS booting with different
  HW configurations and for finding out values needed in
  Hatari keymaps

Fixed Demos :
  Vodka Demo - Kill The Beast 2 (left border removal)


 Version 1.6.0 (2012-01-01):
 ---------------------------

The Hatari project has been moved from hatari.berlios.de to
http://hatari.tuxfamily.org/. Please update all bookmarks!

Emulation:
- More accurate FDC emulation (correct status bits and commands' timings,
  DMA transfer by blocks of 16 bytes, floppy change detection). This should
  fix a lot of non working games
- More accurate microwire clock emulation
- SCSI class 1 (ICD) command support for drives > 1 GB
- Improved color conversion table so that colors are a little bit brighter