@@ -10,11 +10,11 @@
 
 #define MAX_VDI_PLANES  4
 /* TOS needs width to be aligned to 128/planes and height to VDI text
- * height (16 in 1-plane mode, 8 otherwise).   Use TT hi-res as max
- * (max size affects memory usage).
+ * height (16 in 1-plane mode, 8 otherwise).   Use WUXGA resolution
+ * as max (higher than Full HD and considerably larger than TT high).
  */
-#define MAX_VDI_WIDTH  1280
-#define MAX_VDI_HEIGHT  960
+#define MAX_VDI_WIDTH  1920
+#define MAX_VDI_HEIGHT 1200
 /* next in-all-bitdepths aligned size up from smallest ST res. */
 #define MIN_VDI_WIDTH   384
 #define MIN_VDI_HEIGHT  208
